@@ -1,3 +1,7 @@
+2006-12-10 Maarten Brock <sourceforge.brock AT dse.nl>
+
+	* device/include/mcs51/C8051F520.h: fixed buggy CPT0MX
+
 2006-12-11 Jesus Calvino-Fraga <jesusc at ece.ubc.ca>
 
 	* device/include/mcs51/cc2430.h: fixed missing ';'
